[gd_scene load_steps=9 format=3 uid="uid://c7jv8e4j0u13p"]

[ext_resource type="Script" uid="uid://boyp3xheobxad" path="res://characters/bystander.gd" id="1_tb0sd"]
[ext_resource type="Script" uid="uid://bh1nf7ornt2n1" path="res://scripts/ais/base_ai_type.gd" id="2_1qrs5"]
[ext_resource type="Texture2D" uid="uid://7o26uwyl308w" path="res://assets/characters/pawn.png" id="4_pvv41"]
[ext_resource type="PackedScene" uid="uid://cj7yt7xxwc7uc" path="res://components/damage_area_component.tscn" id="6_j1jkn"]
[ext_resource type="AnimationLibrary" uid="uid://dhp8w4j64rmn0" path="res://assets/animations/character_animations.res" id="6_pe016"]
[ext_resource type="Script" uid="uid://b88ojtwt7ji0o" path="res://components/animation_component.gd" id="7_1aiw6"]
[ext_resource type="PackedScene" uid="uid://voersvek38s5" path="res://components/player_collision_shape.tscn" id="7_ftk14"]

[sub_resource type="Resource" id="Resource_63624"]
script = ExtResource("2_1qrs5")
metadata/_custom_type_script = "uid://bh1nf7ornt2n1"

[node name="Bystander" type="CharacterBody2D" groups=["bystanders"]]
collision_layer = 64
collision_mask = 18
script = ExtResource("1_tb0sd")
ai_type = SubResource("Resource_63624")

[node name="PlayerCollisionShape" parent="." instance=ExtResource("7_ftk14")]

[node name="AIOverrideDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="PlayerCollisionShape" parent="AIOverrideDetector" instance=ExtResource("7_ftk14")]
debug_color = Color(0.636139, 0.526786, 1.92523e-07, 0.42)

[node name="DamageAreaComponent" parent="." instance=ExtResource("6_j1jkn")]

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("4_pvv41")

[node name="AnimationComponent" type="AnimationPlayer" parent="."]
libraries = {
&"character_animations": ExtResource("6_pe016")
}
script = ExtResource("7_1aiw6")
metadata/_custom_type_script = "uid://b88ojtwt7ji0o"

[connection signal="damaged" from="DamageAreaComponent" to="." method="_on_damage_area_component_damaged"]
